<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_constraintBottom_toBottomOf="@id/colors_options_container"
    android:layout_marginBottom="16dp"
    tools:context=".activities.OptionsActivity">


    <TextView
        android:id="@+id/options_colors_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/options_color_header"
        android:layout_marginTop="32dp"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.033"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.058" />

    <LinearLayout
        android:id="@+id/colors_options_container"
        android:layout_width="match_parent"
        android:layout_weight="10"
        android:layout_height="wrap_content"
        android:layout_marginLeft="56dp"
        android:layout_marginRight="56dp"
        android:orientation="vertical"
        android:paddingBottom="16dp"
        android:paddingTop="16dp"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toTopOf="@id/options_colors_header">
        <Button
            android:id="@+id/options_change_text_color"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:onClick="onChangeTextColorClick"
            android:text="@string/options_change_text_color"
            android:layout_marginBottom="10dp"/>
        <Button
            android:id="@+id/options_change_buttons_background"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/options_change_buttons_background"
            android:onClick="onChangeButtonsBackgroundColorClick"
            android:layout_marginBottom="10dp"/>
        <Button
            android:id="@+id/options_reset_colors"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/options_reset_colors"
            android:onClick="onResetColorsClick"
            android:layout_marginBottom="10dp"/>
    </LinearLayout>

    <View
        android:id="@+id/divider"
        android:layout_width="409dp"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/colors_options_container"
        app:layout_constraintVertical_bias="0.065" />

    <TextView
        android:id="@+id/options_change_text_size_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/options_change_text_size_label"
        android:layout_marginStart="16dp"
        android:layout_marginTop="56dp"
        app:layout_constraintTop_toBottomOf="@id/colors_options_container"
        app:layout_constraintHorizontal_bias="0.033"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.058"/>

    <LinearLayout
        android:id="@+id/text_size_options_container"
        android:layout_width="match_parent"
        android:layout_weight="10"
        android:layout_height="wrap_content"
        android:layout_marginLeft="56dp"
        android:layout_marginRight="56dp"
        android:orientation="vertical"
        android:paddingBottom="16dp"
        android:paddingTop="16dp"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toTopOf="@id/options_change_text_size_label">
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/options_text_size"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox" >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/options_text_size"
                android:inputType="number"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <Button
        android:id="@+id/options_save_text_size_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/options_save_text_size"
        android:onClick="onSaveTextSizeClick"
        android:layout_marginEnd="14dp"
        app:layout_constraintRight_toRightOf="@id/text_size_options_container"
        app:layout_constraintTop_toBottomOf="@id/text_size_options_container"/>

    <Button
        android:id="@+id/options_change_text_size_cancel_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:onClick="onCancelSaveTextSizeClick"
        android:layout_marginStart="14dp"
        app:layout_constraintLeft_toLeftOf="@id/text_size_options_container"
        app:layout_constraintTop_toBottomOf="@id/text_size_options_container" />

    <Button
        android:id="@+id/options_reset_text_size_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/options_reset_text_size"
        android:onClick="onResetTextSizeClick"
        android:layout_marginEnd="14dp"
        android:layout_marginStart="14dp"
        app:layout_constraintRight_toLeftOf="@id/options_save_text_size_button"
        app:layout_constraintLeft_toRightOf="@id/options_change_text_size_cancel_button"
        app:layout_constraintTop_toBottomOf="@id/text_size_options_container" />

</androidx.constraintlayout.widget.ConstraintLayout>